--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,3 +1,189 @@
 /* import fonts */
 @import url('import.css');
 
+.container {
+    max-width: 1462px;
+    margin: 0 auto;
+    padding: 0 15px;
+    box-sizing: content-box;
+}
+
+/* header */
+.header {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 1;
+}
+.header-block {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-top: 64px;
+}
+
+.header__logo {
+    display: block;
+    font-family: 'Chronicle Display';
+    text-transform: uppercase;
+    font-weight: 700;
+    font-size: 32px;
+    letter-spacing: 1px;
+}
+
+.header__navigation {
+}
+.header__navigation > *:not(:last-child) {
+    margin-right: 40px;
+}
+.navigation__link {
+    font-size: 18px;
+    font-weight: 700;
+}
+
+.header__account {
+    display: flex;
+    align-items: center;
+}
+.header__account > *:not(:last-child) {
+    margin-right: 8px;
+}
+.icon-block {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 24px;
+    height: 24px;
+}
+.icon {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.account__text {
+    font-size: 17px;
+    font-weight: 700;
+}
+
+/* main */
+.main {}
+
+/* main__hero */
+.main__hero {
+}
+.hero-block {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 1;
+}
+.hero__content-wrapper {
+    display: flex;
+    justify-content: space-between;
+}
+.hero-block__social {
+    display: flex;
+    align-items: center;
+    transform: rotate(90deg);
+}
+.hero-block__social > *:not(:last-child) {
+    margin-right: 24px;
+}
+.social__text {
+}
+.icon-block {
+}
+.icon {
+}
+.hero-block__content {
+    max-width: 950px;
+}
+.hero__subtitle {
+    display: flex;
+    align-items: center;
+    text-transform: uppercase;
+    font-size: 18px;
+    font-weight: 800;
+    letter-spacing: 6px;
+    color: var(--main-accent);
+}
+.hero__subtitle::before {
+    display: inline;
+    content: '';
+    width: 72px;
+    height: 2px;
+    margin-right: 32px;
+    background-color: var(--main-accent);
+}
+.hero__title {
+    font-family: 'Chronicle Display';
+    font-size: 88px;
+    line-height: 100px;
+    font-weight: 600;
+}
+.hero__anchor {
+    display: flex;
+}
+.hero__anchor > *:not(:last-child) {
+    margin-right: 16px;
+}
+.anchor__text {
+    font-size: 18px;
+    font-weight: 700;
+}
+.arrow-block {
+    display: flex;
+    width: 16px;
+    height: 24px;
+}
+.arrow {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.hero__slider {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.slider__page {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-family: 'Giloy';
+    font-size: 18px;
+    background-color: transparent;
+    color: inherit;
+    padding: 0;
+}
+.slider__page::after {
+    display: block;
+    content: '';
+    width: 3px;
+    height: 60px;
+    background-color: rgba(255, 255, 255, .5);
+    margin-left: 32px;
+}
+
+.hero__background {
+    position: relative;
+    top: 0;
+    display: flex;
+    width: 100%;
+    height: 1200px;
+}
+.hero__background_overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(rgba(11, 29, 38, 0), rgba(11, 29, 38, 1));
+}
+.hero__image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
